# DAlpha-Pro-Ultimate

./: .gitignore  PROJECT_FILES.csv  Project_Source_Dump.txt  alpha_src_structure_2026.txt  core.txt  core_tree.txt  domain_tree.txt  error.txt  event_bus.txt  execution_source.txt  execution_tree.txt  main.py  project_audit_snapshot.txt  project_source.txt  project_structure.txt  project_tree.txt  pyproject.toml  risk_tree.txt  src_tree.txt  structure.txt  test_exchange.py  test_report.txt
docs/: PROJECT_MANIFEST.md
requirements/: base.txt  dev.txt
src/adapters/: base_adapter.py
src/ai/: ai_engine.py  decision_engine_old.py  feedback_loop.py  market_regime.py  market_regime_old.py  performance_tracker.py  probability_engine.py  (+4 more)
tests/: test_absorption.py  test_asset_scorer.py  test_atr.py  test_backtest_engine.py  test_bos.py  test_breaker_block.py  test_candle.py  test_candle_mapper.py  test_candle_series.py  test_choch.py  test_confidence_engine.py  test_config.py  test_crypto_connector.py  test_cvd.py  test_data_fusion.py  test_decision_models.py  test_delta_volume.py  test_drawdown_guard.py  test_economic_calendar.py  test_ema.py  test_equal_highs_lows.py  test_event_bus.py  test_exchange_flow.py  test_exchange_manager.py  test_fair_value_gap.py  test_fibonacci.py  test_footprint.py  test_funding_rate.py  test_heatmap.py  test_holder_profit.py  test_imbalance.py  test_intermarket.py  test_kill_switch.py  test_liquidation.py  test_liquidity.py  test_long_short_ratio.py  test_macd.py  test_market_analyzer.py  test_market_profile.py  test_market_regime.py  (+32 more)
(+350 files in other folders)
